Create subfolder for covid site

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h1>Projects of Note</h1>
-        <ul>CT COVID-19 Town by Town grapher</ul>
+        <ul><a href=COVIDChart>CT COVID-19 Town by Town grapher</a></ul>
     </body>
 </html>
