Add URL for vaccination rate data source  and find out that population source is no good.

--- a/COVIDChart/index.htm
+++ b/COVIDChart/index.htm
@@ -200,6 +200,11 @@
             }
         });
     }
+
+    function findCityVacinations() {
+        // https://data.ct.gov/resource/x7by-h8k4.json?town=" + toSearch
+
+    }
 </script>
 </html>
 
