--- a/COVIDChart/index.htm
+++ b/COVIDChart/index.htm
@@ -6,7 +6,7 @@
     <title>Connecticut Town By Town COVID Data</title>
 </head>
 <body>
-    <h1>Connecticut Town By Town COVID Dataa</h1>
+    <h1>Connecticut Town By Town COVID Data</h1>
     <div class="dropdown">
         <input type="text" placeholder="Search Towns.." id="myInput" class="searchbox" onkeyup="filterFunction()">
         <div id="myDropdown" class="dropdown-content">
